--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,2 +1,3 @@
 DISCORD_BOT_TOKEN=your_bot_token_here
 BOT_TESTING_CHANNEL_ID=your_testing_channel_id_here
+OPENAI_API_KEY=your_openai_api_kyer_here
