--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Deploy to Elastic Beanstalk
       run: |
         eb init -p python-3.8 mdl-bot --region us-east-1
-        eb deploy
+        eb deploy mdl-bot-env
